Restrict push to main branch

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,11 @@ on:
   pull_request:
     paths-ignore:
       - "**.md"
+  push:
+    paths-ignore:
+      - "**.md"
+    branches:
+      - main
   schedule:
     - cron: 0 0 * * 5
 
