--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,18 +23,24 @@ jobs:
         source-build:
           - null
           - true
+        downloader:
+          - curl
+        include:
+          - os: ubuntu-latest
+            downloader: wget
+            source-build: null
 
     runs-on: ${{ matrix.os }}
 
-    name: asdf-raku on ${{ matrix.os }} (ASDF_RAKU_BUILD=${{ matrix.source-build }})
+    name: asdf-raku on ${{ matrix.os }} using ${{ matrix.downloader }} (ASDF_RAKU_BUILD=${{ matrix.source-build }})
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Install system packages on Ubuntu
-        if: ${{ runner.os == 'Linux' }}
-        run: sudo apt-get install curl
+      - name: Remove curl
+        if: ${{ matrix.downloader == 'wget' }}
+        run: sudo apt-get remove curl
 
       - name: Install system packages on macOS
         if: ${{ runner.os == 'macOS' }}
